fixed the alignment of the photos

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -7,15 +7,16 @@
 }
 
 .column {
-  float: left;
+  
   width: 33.3%;
   margin-bottom: 16px;
   padding: 0 8px;
 }
 
-@media (max-width: 650px) {
+@media{
     .column {
-        width: 100%;
+        margin-left: 10%;
+        width: 20%;
         display: block;
     }
 }
